update openapi & added crud product
