# src/main/java/com/reto/interbank/models/entities/Product.java
@@ -1,0 +1,19 @@
+package com.reto.interbank.models.entities;
+
+import lombok.*;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.relational.core.mapping.Table;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@Builder
+@Table("products")
+public class Product {
+    @Id
+    private Long id;
+    private String name;
+    private Double price;
+    private Long stock;
+}
